Update VariantFactoryImpl to allow CN variants without GT through filter